fix: Gap in cta

--- a/src/app/landing/faq/faq.component.scss
+++ b/src/app/landing/faq/faq.component.scss
@@ -109,6 +109,7 @@ main {
     flex: 1;
     padding-bottom: 2rem;
     padding-right: 2rem;
+    gap: 0.5rem;
 
     .cta-text {
       h2 {
